load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "scala_plugin",
    out = "{name}.jar",
    tool = "@com_github_scalapb_scalapb//:bin/protoc-gen-scala",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_scala_plugin",
    out = "{name}.jar",
    tool = "@com_github_scalapb_scalapb//:bin/protoc-gen-scala",
    visibility = ["//visibility:public"],
)
