load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "scala_plugin",
    out = "{name}.jar",
    tool = select({
        "@bazel_tools//src/conditions:host_windows": "@com_github_scalapb_scalapb//:bin/protoc-gen-scala.bat",
        "//conditions:default": "@com_github_scalapb_scalapb//:bin/protoc-gen-scala"
    }),
    use_built_in_shell_environment = True,
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_scala_plugin",
    out = "{name}.jar",
    options = [
        "grpc",
    ],
    tool = select({
        "@bazel_tools//src/conditions:host_windows": "@com_github_scalapb_scalapb//:bin/protoc-gen-scala.bat",
        "//conditions:default": "@com_github_scalapb_scalapb//:bin/protoc-gen-scala"
    }),
    use_built_in_shell_environment = True,
    visibility = ["//visibility:public"],
)
