load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "swift_plugin",
    outputs = ["{protopath}.pb.swift"],
    tool = "@com_github_apple_swift_protobuf//:ProtoCompilerPlugin",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_swift_plugin",
    outputs = ["{protopath}.grpc.swift"],
    tool = "@com_github_grpc_grpc_swift_patched//:protoc-gen-swiftgrpc",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
