load("//example/routeguide:routeguide_test.bzl", "routeguide_test", "routeguide_test_matrix")

#
# This generates a set of routeguide_test rules, one for each combination of
# client & server. The way most routeguide clients are written, they don't
# actually fail hard if the routeguide procedure does not go as planned.
# Generally, the tests should range between 2-10 seconds.
# If tests are abnormally fast it likely signals an error that should be
# investigated.
#

routeguide_test_matrix(
    clients = [
        "//cpp/example/routeguide:client",
        "//csharp/example/routeguide:client.exe",
        "//go/example/routeguide/client",
        "//java/example/routeguide:client",
        "//nodejs/example/routeguide:client",
        "//python/example/routeguide:client",
        "//ruby/example/routeguide:client",
        "//rust/example/routeguide:client",
        "//scala/example/routeguide:client",
    ],
    servers = [
        "//cpp/example/routeguide:server",
        "//csharp/example/routeguide:server.exe",
        "//go/example/routeguide/server",
        "//java/example/routeguide:server",
        "//nodejs/example/routeguide:server",
        "//python/example/routeguide:server",
        "//ruby/example/routeguide:server",
        "//rust/example/routeguide:server",
    ],
    tagmap = {
        # Apply per-lang tags
        # "csharp": ["no-sandbox", "manual"],
    },
)
