load("@rules_proto_grpc//:defs.bzl", "proto_plugin")

proto_plugin(
    name = "breaking_plugin",
    quirks = ["QUIRK_DIRECT_MODE"],
    separate_options_flag = True,
    tool = select({
        "@rules_proto_grpc//platforms:darwin_arm64": "@buf_breaking_plugin_darwin_arm64//file",
        "@rules_proto_grpc//platforms:darwin_x86_64": "@buf_breaking_plugin_darwin_x86_64//file",
        "@rules_proto_grpc//platforms:linux_aarch64": "@buf_breaking_plugin_linux_arm64//file",
        "@rules_proto_grpc//platforms:linux_x86_64": "@buf_breaking_plugin_linux_x86_64//file",
        "@rules_proto_grpc//platforms:windows_arm64": "@buf_breaking_plugin_windows_arm64//file",
        "@rules_proto_grpc//platforms:windows_x86_64": "@buf_breaking_plugin_windows_x86_64//file",
    }),
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "lint_plugin",
    quirks = ["QUIRK_DIRECT_MODE"],
    separate_options_flag = True,
    tool = select({
        "@rules_proto_grpc//platforms:darwin_arm64": "@buf_lint_plugin_darwin_arm64//file",
        "@rules_proto_grpc//platforms:darwin_x86_64": "@buf_lint_plugin_darwin_x86_64//file",
        "@rules_proto_grpc//platforms:linux_aarch64": "@buf_lint_plugin_linux_arm64//file",
        "@rules_proto_grpc//platforms:linux_x86_64": "@buf_lint_plugin_linux_x86_64//file",
        "@rules_proto_grpc//platforms:windows_arm64": "@buf_lint_plugin_windows_arm64//file",
        "@rules_proto_grpc//platforms:windows_x86_64": "@buf_lint_plugin_windows_x86_64//file",
    }),
    visibility = ["//visibility:public"],
)
