module(
    name = "rules_proto_grpc_buf",
    version = "0.0.0.rpg.version.placeholder",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "protobuf", version = "31.1")
bazel_dep(name = "rules_proto_grpc", version = "0.0.0.rpg.version.placeholder")
bazel_dep(name = "rules_shell", version = "0.5.1")

download_plugins = use_extension("//:module_extensions.bzl", "download_plugins")
use_repo(
    download_plugins,
    "buf_breaking_plugin_darwin_arm64",
    "buf_breaking_plugin_darwin_x86_64",
    "buf_breaking_plugin_linux_arm64",
    "buf_breaking_plugin_linux_x86_64",
    "buf_breaking_plugin_windows_arm64",
    "buf_breaking_plugin_windows_x86_64",
    "buf_lint_plugin_darwin_arm64",
    "buf_lint_plugin_darwin_x86_64",
    "buf_lint_plugin_linux_arm64",
    "buf_lint_plugin_linux_x86_64",
    "buf_lint_plugin_windows_arm64",
    "buf_lint_plugin_windows_x86_64",
)
