module(
    name = "rules_proto_grpc_cpp",
    version = "0.0.0.rpg.version.placeholder",
    compatibility_level = 1,
)

bazel_dep(name = "grpc", version = "1.66.0.bcr.2")
bazel_dep(name = "protobuf", version = "27.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_proto_grpc", version = "0.0.0.rpg.version.placeholder")
