module(
    name = "rules_proto_grpc_csharp",
    version = "0.0.0.rpg.version.placeholder",
    compatibility_level = 1,
)

bazel_dep(name = "grpc", version = "1.65.0")
bazel_dep(name = "protobuf", version = "27.1")
bazel_dep(name = "rules_dotnet", version = "0.17.5")
bazel_dep(name = "rules_proto_grpc", version = "0.0.0.rpg.version.placeholder")
bazel_dep(name = "rules_proto_grpc_example_protos", version = "0.0.0.rpg.version.placeholder")

register_toolchains("@dotnet_toolchains//:all")
local_path_override(
    module_name = "rules_proto_grpc",
    path = "../../modules/core",
)

local_path_override(
    module_name = "rules_proto_grpc_example_protos",
    path = "../../modules/example_protos",
)

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.200")
use_repo(dotnet, "dotnet_toolchains")
