module(
    name = "rules_proto_grpc_csharp",
    version = "0.0.0.rpg.version.placeholder",
    compatibility_level = 1,
)

bazel_dep(name = "grpc", version = "1.74.1")
bazel_dep(name = "rules_dotnet", version = "0.21.5")
bazel_dep(name = "rules_proto_grpc", version = "0.0.0.rpg.version.placeholder")

main_extension = use_extension("//paket:paket.main_extension.bzl", "main_extension")
use_repo(main_extension, "paket.main")
